JBTM-3089 LRA code cleanup